[project]
name = "cosmic-tensors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "affine>=2.4.0",
    "cdsapi>=0.7.7",
    "earthengine-api>=1.7.31",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydeck>=0.9.2",
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "pytest>=9.1.1",
    "rasterstats>=0.21.0",
    "rioxarray>=0.22.0",
    "ruff>=0.15.18",
    "scikit-image>=0.26.0",
    "scipy>=1.18.0",
    "sentinelsat>=1.2.1",
    "shapely>=2.1.2",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.27.2",
    "tqdm>=4.68.3",
    "torch",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
